report: appendix renaming

--- a/report/main.tex
+++ b/report/main.tex
@@ -999,7 +999,7 @@ Figure
 The two control stations feature sockets for 48 sensors, as we currently only use 44,
 the remaining four sockets can be used, to connect additional sensors on demand\footnote{\textbf{Note}, that
 the system is Plug and Play. This means the sensors may be connected and disconnected
-while the system is running.}.\\
+while the system is running.}.
 \paragraph{Cable routing}\hspace{1cm}\\
 As cables to connect the sensors we used shielded CAT.5e cables, with lengths between 3 and 15 meters.
 We attached two unique identifier tags to each cable, connecting a sensor to a collector
@@ -1283,7 +1283,7 @@ the sensor network:
 \end{figure}
 
 %###############################################################
-\chapter{Deployment images}
+\chapter{Installation images and schematics}
 \begin{figure}[Hh!]
 	\centering
 	\includegraphics[width=0.94\textwidth]{img/control_unit.jpg}
