correct care to undefined

--- a/report/main.tex
+++ b/report/main.tex
@@ -168,7 +168,7 @@ Communication with the sensor is done via I2C. Thereby measurements can be initi
     \bitbox{2}{\color{lightgray}\rule{\width}{\height}} & \bitbox[lrt]{6}{}\\
     \wordbox[lrb]{1}{Temperature}\\
 	\end{bytefield}
-  \caption{HYT271 transmission structure. The humidity value and temperature value each consist of 14 bits. The two bits, marked with gray color, before the temperature value are not care \cite{hyt2}.}
+  \caption{HYT271 transmission structure. The humidity value and temperature value each consist of 14 bits. The two bits, marked with gray color, before the temperature value are undefined \cite{hyt2}.}
 	\label{fig:hyt_transmission}
 \end{figure}\\
 For further information about the sensor, and data interpretation, please refer to \cite{hyt}, \cite{hyt3} and \cite{hyt2}.
