report: correct spelling

--- a/report/main.tex
+++ b/report/main.tex
@@ -452,7 +452,7 @@ Figure \ref{fig:hyt_board_transmission} shows the new transmission structure, of
     \wordbox[lrb]{1}{Temperature}\\
     \bitbox{8}{CRC-8}
 	\end{bytefield}
-  \caption{ZACwire Transmission structure of data, which is sent out from the hymidity board. The two bits, marked with gray color, before the temperature value are undefined. ST represents the start bit.}
+  \caption{ZACwire Transmission structure of data, which is sent out from the humidity board. The two bits, marked with gray color, before the temperature value are undefined. ST represents the start bit.}
 	\label{fig:hyt_board_transmission}
 \end{figure}\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
